# RTS

./: CMakeLists.txt  Nový Textový dokument.txt  README.md
assets/: map.txt
core/include/: data.hpp  fx.hpp  pathfinding.hpp  rng.hpp  sim.hpp  types.hpp
core/src/: data.cpp  pathfinding.cpp  sim.cpp
platform/sdl/: input.cpp  main.cpp  renderer.cpp
